RESOLVED FIXED59599
IndexedDB: Fix compiler warnings about uninitialized variables
https://bugs.webkit.org/show_bug.cgi?id=59599
Summary IndexedDB: Fix compiler warnings about uninitialized variables
Hans Wennborg
Reported 2011-04-27 04:40:13 PDT
IndexedDB: Fix compiler warnings about uninitialized variables
Attachments
Patch (2.16 KB, patch)
2011-04-27 04:40 PDT, Hans Wennborg
tonyg: review+
Hans Wennborg
Comment 1 2011-04-27 04:40:48 PDT
Hans Wennborg
Comment 2 2011-04-27 04:45:41 PDT
Note You need to log in before you can comment on or make changes to this bug.