2011-04-27  Hans Wennborg  <hans@chromium.org>

Reviewed by Tony Gentilcore.

        IndexedDB: Fix compiler warnings about uninitialized variables
        https://bugs.webkit.org/show_bug.cgi?id=59599

        Build fix. No new tests.

        * storage/IDBLevelDBBackingStore.cpp:
        (WebCore::getNewObjectStoreId):
        (WebCore::getNewIndexId):

Canonical link: https://commits.webkit.org/74765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85046 268f45cc-cd09-0410-ab3c-d52691b4dbfc